small changes in qty total

--- a/project_360/360_buyer_portal/views/portal_template.xml
+++ b/project_360/360_buyer_portal/views/portal_template.xml
@@ -305,7 +305,7 @@
                             <t t-if="message.message_type=='po' and line.status_line=='on_track'"><td></td></t>
                             <t t-if="message.message_type=='po'"><td></td></t>
                             <td></td>
-                            <td class="text-center">1</td>
+                            <td class="text-center"><t t-esc="sum(message.edi_message_line_ids.mapped('product_qty'))"/></td>
                         </tr>
                     </tbody>
                 </table>
